# awaken-foundation

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  SECURITY.md  deny.toml  lefthook.yml  package.json
crates/awaken-api-contract/: Cargo.toml
crates/awaken-api-contract/src/: auth.rs  error.rs  lib.rs  page.rs  query.rs
crates/awaken-config/: Cargo.toml
crates/awaken-config/src/: lib.rs
crates/awaken-connection/: Cargo.toml
crates/awaken-connection-auth/: Cargo.toml
crates/awaken-connection-auth/src/: lib.rs
crates/awaken-connection-transports/: Cargo.toml
crates/awaken-connection-transports/src/: http.rs  lib.rs  nats.rs
crates/awaken-connection/src/: lib.rs
crates/awaken-query/: Cargo.toml
crates/awaken-query/src/: build.rs  cursor.rs  dialect.rs  dsl.rs  group.rs  lib.rs
crates/awaken-query/tests/: compile.rs  cursor.rs  dsl.rs  group.rs
crates/awaken-scoped-migration/: Cargo.toml
crates/awaken-scoped-migration/src/: lib.rs  postgres.rs  sqlite.rs  sqlite_sqlx.rs
crates/awaken-sql-migration/: Cargo.toml
crates/awaken-sql-migration/src/: postgres.rs  sqlite.rs
docs/adr/: 0000-template.md  0001-foundation-tier.md  0002-configuration-convention.md  0003-api-contract-primitives.md  0004-query-engine.md  README.md
docs/design/: README.md  api-contract.md  query.md  scoped-migration.md  sql-migration.md
hooks/: README.md  check_migrations.py
scripts/ci/: check-coverage.sh  check_adr.py  check_adr_immutability.py  check_commit_shape.py  check_doc_links.py  check_file_length.py  check_hidden_unicode.py  check_open_core_boundary.py  check_root_docs.py  check_secrets.py
xtask/: Cargo.toml
xtask/src/: main.rs
