[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AwakenWorks/awaken-foundation"
authors = ["The Awaken Authors"]
publish = false

[workspace.dependencies]
# Foundation crates (path-resolved within this workspace).
awaken-api-contract = { path = "crates/awaken-api-contract", version = "0.1.0-dev" }
awaken-scoped-migration = { path = "crates/awaken-scoped-migration", version = "0.1.0-dev" }

# Shared third-party dependencies. Members opt in via `<dep>.workspace = true`.
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
sqlx = { version = "0.8", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
