[package]
name = "awaken-api-contract"
description = "Neutral API contract primitives for errors, cursor pagination, sorting, and allowlisted filtering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
categories = ["web-programming"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars = { workspace = true, optional = true }

[features]
default = []
schema = ["dep:schemars"]

[lints]
workspace = true
