[package]
name = "awaken-config"
description = "Namespaced, layered configuration so services compose without key collisions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
categories = ["config"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
