[package]
name = "awaken-query"
description = "Dialect-aware filter/sort/cursor to parameterized SQL fragment compiler for awaken-api-contract list queries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
categories = ["database"]

[dependencies]
awaken-api-contract.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true

[features]
default = []
# Optional string filter grammar that parses into the same `FilterNode` AST.
dsl = []

[lints]
workspace = true
